test: 예약 승격 후 대기 순번 재계산 검증